# TopBrain_Eval_Metrics

./: .gitignore  README.md  pyproject.toml
test_assets/task_1_seg_output/: expected_e2e_test_ct_metrics.json  expected_e2e_test_mr_metrics.json
test_assets/task_1_seg_output_ct_2/: expected_e2e_test_ct_2_metrics.json
test_assets/task_1_seg_output_mr_2/: expected_e2e_test_mr_2_metrics.json
topbrain25_eval/: base_algorithm.py  configs.py  constants.py  evaluation.py  for_gc_docker.py  score_case_task_1_seg.py  test_constants.py  test_evaluation_task_1_seg.py  test_evaluation_task_1_seg_2.py  test_score_case_task_1_seg.py
topbrain25_eval/aggregate/: aggregate_all_detection_dicts.py  test_aggregate_all_detection_dicts.py
topbrain25_eval/metrics/: cls_avg_b0.py  cls_avg_clDice.py  cls_avg_dice.py  cls_avg_hd95.py  cls_avg_invalid_neighbors.py  detection_sideroad_labels.py  generate_cls_avg_dict.py  test_cls_avg_b0.py  test_cls_avg_clDice.py  test_cls_avg_dice.py  test_cls_avg_hd95.py  test_cls_avg_invalid_neighbors.py  test_detection_sideroad_labels.py  test_generate_cls_avg_dict.py  test_valid_neighbors.py
topbrain25_eval/utils/: get_neighbor_per_mask.py  test_get_neighbor_per_mask.py  test_utils_mask.py  utils_mask.py
